# irsanai-mom4ai-forge

./: .gitignore  .user.json  AGENTS.md  CHANGELOG.md  README.en.md  README.md  ancestry.json  pyproject.toml  requirements.txt  users.json
docs/: _config.yml  ancestry.json  assembly_compiler_contract.md  benchmark_report.json  benchmark_runner.md  chemie_manager.md  codex_atomic_task_template.md  codex_preflight_checklist.md  component_manager.md  component_registry.json  factory_blueprint.md  index.html  index.md  mini_transformer_adapter.md  mini_transformer_training.md  openai_agents_hook.md  quality_gates.md  quality_gates_report.json  readme_sync_manager.md  readme_sync_report.json  release_faq.md  release_readiness.md  repo_resonance_standard.md  resonance_lifecycle.md  resonance_lifecycle_report.json  resonance_protocol.md  runtime_adapter.md  sdk_hooks.md  v0.2_execution_plan.md  vendor_wiring.md
src/: assembly_compiler.py  benchmark_runner.py  bio_components.py  chemie_manager.py  child_generator.py  component_manager.py  live_dashboard_server.py  mini_transformer_adapter.py  mini_transformer_trainer.py  mom_forge.py  mom_forge_bak.py  mom_forge_stable_version.py  momai_cli.py  openai_agents_hook.py  quality_gates.py  readme_sync_manager.py  release_guard.py  resonance_lifecycle.py  resonance_protocol.py  runtime_adapter.py  sdk_hooks.py  vendor_wiring.py
survivors/: AlgenAmeisen-G1.636388888888889-399-c0fa1d90.json  AlgenBakterien-G1.636388888888889-183-37cf5685.json  AlgenBakterien-G1.636388888888889-399-cdec912c.json  (+902 more)
tests/: smoke_test.py
(+12 files in other folders)
